--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
+		<version>2.0</version>
+		    <configuration>
+        		<warName>fox</warName>
+        		<outputDirectory>target/</outputDirectory>
+    		    </configuration>
             </plugin>
         </plugins>
     </build>
