--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,9 @@
 
 
     <build>
+	
+ 	<directory>target/</directory>
+    
     	<outputDirectory>src/main/webapp/WEB-INF/classes</outputDirectory>
         <finalName>spring-social-login</finalName>
         <resources>
